cmake_minimum_required(VERSION 3.8)
project(cs222)

set(CMAKE_CXX_STANDARD 11)

add_library(RBF rbf/pfm.cc rbf/rbfm.cc)
add_library(RM rm/rm.cc)

add_executable(my_test my_test.cpp)

add_executable(cs222_rbftest01 rbf/rbftest1.cc)
target_link_libraries(cs222_rbftest01 RBF)
add_executable(cs222_rbftest02 rbf/rbftest2.cc)
target_link_libraries(cs222_rbftest02 RBF)
add_executable(cs222_rbftest03 rbf/rbftest3.cc)
target_link_libraries(cs222_rbftest03 RBF)
add_executable(cs222_rbftest04 rbf/rbftest4.cc)
target_link_libraries(cs222_rbftest04 RBF)
add_executable(cs222_rbftest05 rbf/rbftest5.cc)
target_link_libraries(cs222_rbftest05 RBF)
add_executable(cs222_rbftest06 rbf/rbftest6.cc)
target_link_libraries(cs222_rbftest06 RBF)
add_executable(cs222_rbftest07 rbf/rbftest7.cc)
target_link_libraries(cs222_rbftest07 RBF)
add_executable(cs222_rbftest08 rbf/rbftest8.cc)
target_link_libraries(cs222_rbftest08 RBF)
add_executable(cs222_rbftest08b rbf/rbftest8b.cc)
target_link_libraries(cs222_rbftest08b RBF)
add_executable(cs222_rbftest09 rbf/rbftest9.cc)
target_link_libraries(cs222_rbftest09 RBF)
add_executable(cs222_rbftest10 rbf/rbftest10.cc)
target_link_libraries(cs222_rbftest10 RBF)
add_executable(cs222_rbftest11 rbf/rbftest11.cc)
target_link_libraries(cs222_rbftest11 RBF)
add_executable(cs222_rbftest12 rbf/rbftest12.cc)
target_link_libraries(cs222_rbftest12 RBF)
add_executable(cs222_rbftest_p0 rbf/rbftest_p0.cc)
target_link_libraries(cs222_rbftest_p0 RBF)
add_executable(cs222_rbftest_p1 rbf/rbftest_p1.cc)
target_link_libraries(cs222_rbftest_p1 RBF)
add_executable(cs222_rbftest_p1b rbf/rbftest_p1b.cc)
target_link_libraries(cs222_rbftest_p1b RBF)
add_executable(cs222_rbftest_p1c rbf/rbftest_p1c.cc)
target_link_libraries(cs222_rbftest_p1c RBF)
add_executable(cs222_rbftest_p2 rbf/rbftest_p2.cc)
target_link_libraries(cs222_rbftest_p2 RBF)
add_executable(cs222_rbftest_p2b rbf/rbftest_p2b.cc)
target_link_libraries(cs222_rbftest_p2b RBF)
add_executable(cs222_rbftest_p3 rbf/rbftest_p3.cc)
target_link_libraries(cs222_rbftest_p3 RBF)
add_executable(cs222_rbftest_p4 rbf/rbftest_p4.cc)
target_link_libraries(cs222_rbftest_p4 RBF)
add_executable(cs222_rbftest_p5 rbf/rbftest_p5.cc)
target_link_libraries(cs222_rbftest_p5 RBF)

add_executable(cs222_rmtest_create_tables rm/rmtest_create_tables.cc)
target_link_libraries(cs222_rmtest_create_tables RBF RM)
add_executable(cs222_rmtest_delete_tables rm/rmtest_delete_tables.cc)
target_link_libraries(cs222_rmtest_delete_tables RBF RM)
add_executable(cs222_rmtest_00 rm/rmtest_00.cc)
target_link_libraries(cs222_rmtest_00 RBF RM)
add_executable(cs222_rmtest_01 rm/rmtest_01.cc)
target_link_libraries(cs222_rmtest_01 RBF RM)
add_executable(cs222_rmtest_02 rm/rmtest_02.cc)
target_link_libraries(cs222_rmtest_02 RBF RM)
add_executable(cs222_rmtest_03 rm/rmtest_03.cc)
target_link_libraries(cs222_rmtest_03 RBF RM)
add_executable(cs222_rmtest_04 rm/rmtest_04.cc)
target_link_libraries(cs222_rmtest_04 RBF RM)
add_executable(cs222_rmtest_05 rm/rmtest_05.cc)
target_link_libraries(cs222_rmtest_05 RBF RM)
add_executable(cs222_rmtest_06 rm/rmtest_06.cc)
target_link_libraries(cs222_rmtest_06 RBF RM)
add_executable(cs222_rmtest_07 rm/rmtest_07.cc)
target_link_libraries(cs222_rmtest_07 RBF RM)
add_executable(cs222_rmtest_08 rm/rmtest_08.cc)
target_link_libraries(cs222_rmtest_08 RBF RM)
add_executable(cs222_rmtest_09 rm/rmtest_09.cc)
target_link_libraries(cs222_rmtest_09 RBF RM)
add_executable(cs222_rmtest_10 rm/rmtest_10.cc)
target_link_libraries(cs222_rmtest_10 RBF RM)
add_executable(cs222_rmtest_11 rm/rmtest_11.cc)
target_link_libraries(cs222_rmtest_11 RBF RM)
add_executable(cs222_rmtest_12 rm/rmtest_12.cc)
target_link_libraries(cs222_rmtest_12 RBF RM)
add_executable(cs222_rmtest_13 rm/rmtest_13.cc)
target_link_libraries(cs222_rmtest_13 RBF RM)
add_executable(cs222_rmtest_13b rm/rmtest_13b.cc)
target_link_libraries(cs222_rmtest_13b RBF RM)
add_executable(cs222_rmtest_14 rm/rmtest_14.cc)
target_link_libraries(cs222_rmtest_14 RBF RM)
add_executable(cs222_rmtest_15 rm/rmtest_15.cc)
target_link_libraries(cs222_rmtest_15 RBF RM)
